--- a/zaplib/docs/theme/header.hbs
+++ b/zaplib/docs/theme/header.hbs
@@ -1,3 +1,3 @@
 <div class="banner">
-  👋  We're in alpha! Come say hi in our <a href="/slack.html">Slack</a>.
+  <a href="/docs/blog_post_mortem.html">🥲 Zaplib isn't actively maintained</a>.
 </div>
